Nova versão meu primeiro site

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <article>
 
             <p>
-                Olá! Eu sou Jefferson e estou aprendendo a desenvolver web.
+                Olá! Eu sou Jefferson e estou aprendendo a desenvolver web, adicionado mais um texto.
             </p>
         </article>
         <aside>
