--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <section id="sobre">
         <h2>Sobre mim</h2>
 
-        <img src="WhatsApp Image 2026-02-05 at 18.47.58.jpeg"alt="Imagem de perfil" title="Imagem de perfil Loja">
+        <img src="WhatsApp Image 2026-02-05 at 18.47.58.jpeg" alt="Imagem de perfil" title="Imagem de perfil Loja" style="width:200px;height:200px;">
 
         <article>
 
             <p>
-                Olá! Eu sou Jefferson e estou aprendendo a desenvolver web, adicionado mais um texto.
+                Olá! Eu sou Jefferson e estou aprendendo a desenvolver web.
             </p>
         </article>
         <aside>
@@ -59,8 +59,49 @@
 
         </article>
     </section>
+
+    <section id="habilidades">
+        <h2>habilidades e tecnologias</h2>
+
+        <table>
+
+            <thead>
+                <tr>
+
+                    <th>Tecnologia</th>
+                    <th>Nível</th>
+                    <th>Descrição</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>HTML</td>
+                    <td>Iniciante</td>
+                    <td>Capaz de construir estruturas de páginas web semânticas e responsivas.</td>
+                </tr>
+
+                <tr>
+                    <td>CSS</td>
+                    <td>Intermadiário</td>
+                    <td>Experiências com flexbox, grid e animações CSS.</td>
+                </tr>
+
+                 <tr>
+                    <td>JavaScript</td>
+                    <td>Básico</td>
+                    <td>Desenvolvimento de scripts do lado do cliente para interações.</td>
+                </tr>
+
+            </tbody>
+
+        </table>
+
+
+    </section>
+
     <footer>
-        <p>Direitos reservados ao Jeffeson</p>
+        <p>Direitos reservados ao Jefferson</p>
 
         <section id="contatos">
 
@@ -68,10 +109,38 @@
 
             <p>Tem um projeto em mente? Entre emm contato</p>
 
-            <address>
-                E-mail: <a href="mailto:jeffersonsanto180@gmail.com">jeffersonsanto180@gmail.com</a> <br>
-                telefone: <a href="tel:4898875-4512">4898875-4512</a>
-            </address>
+            <form action="">
+
+                <label for="nome">Nome: </label>
+                <input type="text" id="nome" name="nome" required> <br>
+
+                <label for="email">E-mail: </label>
+                <input type="email" id="email" name="email" required> <br>
+
+                <label for="telefone">Telefone: </label>
+                <input type="telefone" id="telefone" name="telefone" required> <br>
+
+                <label for="assunto">Assunto: </label>
+                <select name="assunto" id="assunto">
+                    <option value="orçamento">Orçamento</option>
+                    <option value="duvida">Duvida</option>
+                    <option value="outro">Outro</option>
+                </select>
+
+                <br>
+
+                <label for="mensagem">Mensagem: </label> <br>
+                <textarea name="mensagem" id="mensagem" cols="30" rows="10"></textarea> <br>
+
+                <input type="checkbox" id="inscriçao" name="inscriçao">
+                <label for="inscriçai">Deseja receber minha newletter? Fique atento.: </label>
+
+                <br>
+
+                <input type="submit" value="Enviar mensagem">
+
+            </form>
+
         </section>
     </footer>
 </body>
