--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="sobre">
         <h2>Sobre mim</h2>
 
-        <img src="WhatsApp Image 2026-02-05 at 18.47.58.jpeg" alt="Imagem de perfil" title="Imagem de perfil Loja" style="width:200px;height:200px;">
+        <img src="foto.jpeg" alt="foto.jpeg" title="Imagem de perfil Loja" style="width:200px;height:200px;">
 
         <article>
 
